--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,18 +3,20 @@
 .section__title {
   font-family: "Amatic SC", cursive;
   font-weight: 700;
-  font-size: 2em;
+  font-size: 2.5em;
   text-align: center;
-  margin: 0.25em;
+  margin-bottom: 0.25em;
 }
 
 .heading {
   font-family: "Amatic SC", cursive;
+  font-weight: 700;
 }
 
 .body-copy {
   font-family: "Josefin Sans", sans-serif;
   text-align: center;
+  line-height: 140%;
 }
 
 /* http://meyerweb.com/eric/tools/css/reset/ 
@@ -95,16 +97,16 @@ table {
   width: 4em;
 }
 
-a {
-  color: #333333;
-  text-decoration: none;
-}
-
 .header {
   background-color: #DAEEF2;
   display: flex;
   padding: 1em 1.5em;
   justify-content: space-between;
+  position: fixed;
+  width: 100%;
+  height: 64px;
+  z-index: 9999;
+  box-shadow: 0px 0px 7px 0px #333333;
 }
 .header .header__top {
   display: flex;
@@ -115,10 +117,9 @@ a {
 .header .header__top-right {
   display: flex;
 }
-.header .logo {
-  width: 30px;
-  height: 30px;
-  background-color: #86BBC0;
+.header .button-menu {
+  background-color: transparent;
+  border: none;
 }
 .header .menu {
   display: flex;
@@ -129,26 +130,146 @@ a {
 .hero {
   position: relative;
 }
-
-.image-hero {
+.hero .image-hero {
   width: 100%;
 }
 
+.welcome {
+  background-color: #DAEEF2;
+  padding: 2em;
+}
+.welcome .logo {
+  width: 40%;
+  display: flex;
+  margin: 0 auto;
+}
+.welcome .blurb {
+  margin-top: 1em;
+}
+
+.discover .image-hero {
+  width: 100%;
+}
+
+.relax .image {
+  width: 100%;
+}
+
+.icons {
+  background-color: #DAEEF2;
+  padding: 2em;
+  width: 100%;
+}
+.icons .icons__icon {
+  padding-bottom: 0.5em;
+}
+.icons .image {
+  width: 50%;
+  display: flex;
+  margin: 0 auto;
+}
+.icons .heading {
+  text-align: center;
+  font-size: 2em;
+}
+.icons .blurb {
+  padding: 0 1em;
+}
+
+.testimonials {
+  padding: 2em;
+}
+.testimonials .testimonials__review {
+  padding-bottom: 1.5em;
+}
+.testimonials .testimonials__name {
+  font-size: 1.5em;
+}
+.testimonials .testimonials__comment {
+  text-align: left;
+}
+
+.instagram .instagram__layout {
+  display: grid;
+  grid-template-columns: auto auto;
+  margin-top: 1em;
+}
+.instagram .instagram__image {
+  width: 100%;
+}
+
+.footer {
+  background-color: #86BBC0;
+  width: 100%;
+  padding: 2em;
+}
+.footer section {
+  margin-bottom: 1.5em;
+}
+.footer .logo {
+  width: 50%;
+  display: flex;
+  margin: 0 auto;
+}
+.footer .footer__copyright {
+  margin-bottom: 0;
+}
+
+.socials {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 1.5em auto;
+}
+.socials .icon {
+  margin: 0.5em;
+}
+.socials img {
+  background-color: #FFFFFF;
+  width: 40px;
+  padding: 0.5em;
+  border-radius: 100%;
+}
+
+.footer__contact .section__title {
+  text-align: left;
+}
+.footer__contact .body-copy {
+  text-align: left;
+}
+
+.footer__links .section__title {
+  text-align: left;
+}
+.footer__links .body-copy {
+  text-align: left;
+}
+
+.footer__legal .section__title {
+  text-align: left;
+}
+.footer__legal .body-copy {
+  text-align: left;
+}
+
+a {
+  color: #000000;
+  text-decoration: none;
+}
+
+main {
+  padding-top: 64px;
+}
 main .section {
-  margin-bottom: 2em;
+  width: 100%;
 }
 main .button-normal {
   margin: 0 auto;
   justify-content: center;
   padding: 0.5em 4.5em;
 }
-main .instagram__layout {
-  display: grid;
-  grid-template-columns: auto auto;
-  margin: 1em 0;
-}
-main .instagram__image {
-  width: 100%;
+main .blurb__cta {
+  padding: 1em 2em;
 }
 
 /*# sourceMappingURL=main.css.map */
