--- a/public/css/main.css
+++ b/public/css/main.css
@@ -105,7 +105,7 @@ table {
   position: fixed;
   width: 100%;
   height: 64px;
-  z-index: 9999;
+  z-index: 9000;
   box-shadow: 0px 0px 7px 0px #333333;
 }
 .header .header__top {
@@ -125,6 +125,28 @@ table {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.menu__closed {
+  display: none;
+}
+
+.menu__opened {
+  display: block;
+  background-color: #FFFFFF;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  top: 64px;
+  left: 0;
+}
+.menu__opened ul {
+  padding: 1em 2em;
+}
+.menu__opened ul li {
+  text-align: left;
+  padding: 0.75em 0;
+  font-size: 1.5em;
 }
 
 .hero {
