--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -8,7 +8,7 @@
     position: fixed;
     width: 100%;
     height: 64px;
-    z-index: 9999;
+    z-index: 9000;
     box-shadow: 0px 0px 7px 0px base.$colour-dark;
     
     .header__top {
@@ -39,4 +39,28 @@
         align-items: center;
     }
 
+}
+
+.menu__closed {
+    display: none;
+}
+
+.menu__opened {
+    display: block;
+    background-color: base.$colour-light;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    // z-index: 9999;
+    top: 64px;
+    left: 0;
+
+    ul {
+        padding: 1em 2em;
+    }
+    ul li {
+        text-align: left;
+        padding: .75em 0;
+        font-size: 1.5em;
+    }
 }
