--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -21,6 +21,7 @@ $body-copy: 'Josefin Sans', sans-serif;
     // text-decoration: none;
     text-align: center;
     line-height: 140%;
+    margin: .5em 0;
 }
 
 // Colours
