--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -8,7 +8,7 @@
     color: base.$colour-dark;
     border: base.$colour-dark 1px solid;
     border-radius: 2em;
-    // width: 
+    // width:
     align-self: center;
     display: flex;
 }
@@ -23,4 +23,14 @@
     margin: 0 auto;
     text-align: center;
     width: 4em;
+}
+
+.button-long {
+    background-color: base.$colour-light;
+    padding: .5em 3em;
+    // border: none;
+    margin: 0 auto;
+    text-align: center;
+    justify-content: center; 
+    width: 100%;
 }
