--- a/src/scss/layout/_body.scss
+++ b/src/scss/layout/_body.scss
@@ -1,9 +1,15 @@
 @use '../base/base';
 
 
+@media screen and (min-width: 768px) {
+    .container {
+        max-width: 500px;
+        margin: 0 auto;
+    }
+}
 
 //////////
-// HERO // 
+// HERO //
 //////////
 
 .hero {
@@ -13,46 +19,89 @@
         width: 100%;
     }
 
+    @media screen and (min-width: 768px) {
+        .blurb__cta {
+            position: absolute;
+            bottom: 0;
+            padding-bottom: 3em;
+            width: 500px;
+        }
+
+        .section__title {
+            color: base.$colour-light;
+            font-size: 4em;
+            text-align: left;
+        }
+    }
 }
 
 
 
 /////////////
-// WELCOME // 
+// WELCOME //
 /////////////
 
 .welcome {
     background-color: base.$colour-primary;
     padding: 2em;
-    
+
     .logo {
         width: 40%;
         display: flex;
         margin: 0 auto;
+
+        @media screen and (min-width: 768px) {
+            width: 150px;
+        }
     }
 
     .blurb {
         margin-top: 1em;
     }
+
+
 }
 
 
 
 //////////////
-// DISCOVER // 
+// DISCOVER //
 //////////////
 
 .discover {
+    position: relative;
 
     .image-hero {
         width: 100%;
+    }
+
+    @media screen and (min-width: 768px) {
+        .blurb__cta {
+            position: absolute;
+            bottom: 0;
+            padding-bottom: 3em;
+            width: 450px;
+        }
+
+        .section__title {
+            color: base.$colour-light;
+            font-size: 4em;
+            text-align: left;
+        }
+
+        .body-copy {
+            text-align: left;
+            color: base.$colour-light;
+            font-size: 1.3em;
+            margin-bottom: 1em;
+        }
     }
 }
 
 
 
 ///////////
-// RELAX // 
+// RELAX //
 ///////////
 
 .relax {
@@ -62,12 +111,27 @@
         width: 100%;
     }
 
+    @media screen and (min-width: 768px) {
+        padding: 2em;
+
+        .image {
+            width: 500px;
+            margin: 0 auto;
+            display: flex;
+            // padding-top: 3em;
+        }
+
+        .button-long {
+            border: base.$colour-dark 1px solid;
+            margin: 0 auto;
+        }
+    }
 }
 
 
 
 ///////////
-// ICONS // 
+// ICONS //
 ///////////
 
 .icons {
@@ -76,18 +140,24 @@
     padding: 2em;
     width: 100%;
 
+    .icons__all {
+        margin: 0 auto;
+        // max-width: 350px;
+    }
 
     .icons__icon {
         padding-bottom: .5em;
+        // max-width: 250px;
+        // min-width: 150px;
     }
 
     .image {
-        width: 50%;
+        width: 150px;
         display: flex;
         // flex-direction: column;
         // align-items: center;
-        // justify-content: center;   
-        margin: 0 auto 
+        // justify-content: center;
+        margin: 0 auto;
     }
 
     .heading {
@@ -99,12 +169,32 @@
     .blurb {
         padding: 0 1em;
     }
+
+    @media screen and (min-width: 768px) {
+        display: flex;
+
+        .icons__all {
+            display: flex;
+            margin: 0 auto;
+        }
+
+        .icons__icon {
+            width: 250px;
+            // padding: 0 1em;
+            // max-width: 300px;
+
+            // .icons__icon .image {
+            //     // max-width: 50px;
+            //     // width: 100%;
+            // }
+        }
+    }
 }
 
 
 
 //////////////////
-// TESTIMONIALS // 
+// TESTIMONIALS //
 //////////////////
 
 .testimonials {
@@ -126,7 +216,7 @@
 
 
 ///////////////
-// INSTAGRAM // 
+// INSTAGRAM //
 ///////////////
 
 .instagram {
@@ -140,4 +230,10 @@
         width: 100%;
     }
 
+    @media screen and (min-width: 768px) {
+
+        .instagram__layout {
+            grid-template-columns: auto auto auto auto;
+        }
+    }
 }
