--- a/src/scss/layout/_body.scss
+++ b/src/scss/layout/_body.scss
@@ -8,6 +8,12 @@
     }
 }
 
+@media screen and (min-width: 1024px) {
+    .container {
+        max-width: 700px;
+    }
+}
+
 //////////
 // HERO //
 //////////
@@ -31,6 +37,14 @@
             color: base.$colour-light;
             font-size: 4em;
             text-align: left;
+        }
+    }
+
+    @media screen and (min-width: 1024px) {
+        .image-hero {
+            // width: auto;
+            height: 100vh;
+            object-fit: cover;
         }
     }
 }
@@ -211,6 +225,12 @@
         text-align: left;
     }
 
+
+    @media screen and (min-width: 768px) {
+        .testimonials__all {
+            display: flex;
+        }
+    }
 }
 
 
