--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -2,9 +2,9 @@
 
 .header {
     background-color: base.$colour-primary;
-    display: flex;
-    padding: 1em 1.5em;
-    justify-content: space-between;
+    // display: flex;
+    // padding: 1em 1.5em;
+    // justify-content: space-between;
     position: fixed;
     width: 100%;
     height: 64px;
@@ -13,18 +13,18 @@
     
     .header__top {
         display: flex;
+        justify-content: space-between;
+        width: 100%;
+        padding: 1em 1.5em;
+        position: relative;
+
     }
-    .header__top-left {
-        display: flex;
+
+
+
+    .logo {
+        width: 30px;
     }
-    .header__top-right {
-        display: flex;
-    }
-    // .logo {
-    //     width: 30px;
-    //     height: 30px;
-    //     background-color: base.$colour-secondary;
-    // }
 
     .button-menu {
         background-color: transparent;
@@ -62,5 +62,29 @@
         text-align: left;
         padding: .75em 0;
         font-size: 1.5em;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .button-menu {
+        display: none;
+    }
+
+    .header__bottom {
+        background-color: base.$colour-secondary;
+        display: flex;  
+        width: 100%;      
+    }
+    .nav {
+        display: flex;
+        width: 100%;
+        flex-direction: row;
+    }
+    ul {
+        display: flex;
+        margin: 0 auto;    
+    }
+    ul li {
+        padding: 0 2em;
     }
 }
