--- a/src/scss/layout/_body.scss
+++ b/src/scss/layout/_body.scss
@@ -160,7 +160,7 @@
     }
 
     .icons__icon {
-        padding-bottom: .5em;
+        margin-bottom: 2.5em;
         // max-width: 250px;
         // min-width: 150px;
     }
@@ -172,6 +172,7 @@
         // align-items: center;
         // justify-content: center;
         margin: 0 auto;
+        margin-bottom: 1em;
     }
 
     .heading {
@@ -193,7 +194,8 @@
         }
 
         .icons__icon {
-            width: 250px;
+            width: auto;
+            margin-bottom: 0;
             // padding: 0 1em;
             // max-width: 300px;
 
@@ -203,6 +205,14 @@
             // }
         }
     }
+
+    @media screen and (min-width: 1024px) {
+
+        .icons__icon {
+            max-width: 300px;
+        }
+    }
+
 }
 
 
