--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -2,28 +2,18 @@
 
 .header {
     background-color: base.$colour-primary;
-    // display: flex;
-    // padding: 1em 1.5em;
-    // justify-content: space-between;
+    display: flex;
+    padding: .75em 1.5em;
+    justify-content: space-between;
     position: fixed;
     width: 100%;
     height: 64px;
     z-index: 9000;
     box-shadow: 0px 0px 7px 0px base.$colour-dark;
-    
-    .header__top {
-        display: flex;
-        justify-content: space-between;
-        width: 100%;
-        padding: 1em 1.5em;
-        position: relative;
-
-    }
-
-
 
     .logo {
-        width: 30px;
+        // width: 30px;
+        width: auto;
     }
 
     .button-menu {
@@ -47,7 +37,7 @@
 
 .menu__opened {
     display: block;
-    background-color: base.$colour-light;
+    background-color: base.$colour-secondary;
     position: absolute;
     width: 100vw;
     height: 100vh;
@@ -63,28 +53,34 @@
         padding: .75em 0;
         font-size: 1.5em;
     }
+    ul li a {
+        color: base.$colour-light;
+    }
 }
 
 @media screen and (min-width: 1024px) {
     .button-menu {
         display: none;
     }
-
-    .header__bottom {
-        background-color: base.$colour-secondary;
-        display: flex;  
-        width: 100%;      
-    }
     .nav {
         display: flex;
-        width: 100%;
+        width: auto;
         flex-direction: row;
     }
     ul {
         display: flex;
-        margin: 0 auto;    
+        margin: 0 auto;
     }
     ul li {
         padding: 0 2em;
+    }
+
+    ul li a:hover {
+        color: base.$colour-secondary;
+    }
+ 
+    .book {
+        width: auto;
+        text-align: center;
     }
 }
