--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -4,6 +4,8 @@
     background-color: base.$colour-secondary;
     width: 100%;
     padding: 2em;
+    padding-bottom: 0;
+    justify-content: center;
 
     section {
         margin-bottom: 1.5em;
@@ -16,9 +18,40 @@
         margin: 0 auto;   
     }
 
-    .footer__copyright {
+    .footer__copyright p {
         margin-bottom: 0;
+        padding: 1em .5em;
     }
+
+    @media screen and (min-width: 768px) {
+        padding: 5em;
+        padding-bottom: 0;
+        
+        .all-links {
+            display: flex;
+            flex-direction: row;
+            // justify-content: space-between;
+            justify-content: center;
+            // align-items: center;
+            margin: 0 auto;
+        }
+
+        .links {
+            width: 250px;
+        }
+
+    
+
+
+        
+
+
+        .logo {
+            width: 150px;
+        }
+    }
+
+
 }
 
 .socials {
@@ -38,7 +71,15 @@
         width: 40px;
         padding: .5em;
         border-radius: 100%;
-    };
+    }
+
+    @media screen and (min-width: 1024px) {
+        ul li {
+            padding: 0;            
+        }
+
+    }
+
 }
 
 // .footer__contact {
