--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,7 +22,7 @@ a {
 
 main {
 
-    padding-top: 64px;
+    // padding-top: 64px;
     // margin: 0 2em;
     .section {
         // margin-bottom: 2em;
@@ -39,4 +39,7 @@ main {
         padding: 1em 2em;
     }
 
+    @media screen and (min-width: 1024px) {
+        padding-top: 0;
+    }
 }
